# Microservice-Applicatoin

app/api-gateway/: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/api-gateway/src/: app.controller.ts  app.module.ts  main.ts
app/api-gateway/src/cnn/: cnn-job.input.ts  cnn-job.resolver.ts  cnn-job.service.ts  cnn-job.type.ts
app/api-gateway/src/order/: order.grpc.ts  order.resolver.ts  order.type.ts
app/api-gateway/src/product/: product.grpc.ts  product.resolver.ts  product.type.ts
app/api-gateway/src/user/: user.resolver.ts  user.type.ts
app/order-service-go/: go.mod  go.sum  main.go
app/order-service-go/order-pb/: order.pb.go  order_grpc.pb.go
app/product-service-rust/: Cargo.toml  build.rs
app/product-service-rust/src/: main.rs
app/roi-cnn-service/: docker-comopose.yml  requirements.txt
app/roi-cnn-service/app/: worker.py
app/user-service/: package.json  pnpm-lock.yaml
app/user-service/src/: app.controller.ts  main.ts
proto/: order.proto  product.proto
