[package]
name = "product-service-ruct"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tonic = { version = "0.14.2", features = ["transport"] }
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"]  }
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
